add more soundeffect and adjust main screen alignment problem